--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "url": "https://github.com/microsoft/codespaces-teaching-template-js/issues"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.1",
+    "@mui/material": "^5.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
